added message service to message i18n replaced text with message references in emails and some views

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,16 @@
-greeting=Hello there!
+redditclone.pageTitle=Redditclone - Spring Boot Reddit Clone
+redditclone.appNavLinkText=REDDITCLONE
+
+#welcome email
+redditclone.email.welcome.subject=Redditclone Welcome
+redditclone.email.welcome.title=Welcome new Redditclone User
+redditclone.email.welcome.greeting=Dear {0},
+redditclone.email.welcome.body=Welcome to your new favorite site!
+redditclone.email.welcome.appLinkText=Go to Redditclone.
+
+#activation email
+redditclone.email.activation.subject=Redditclone User Activation
+redditclone.email.activation.title=Redditclone User Activation
+redditclone.email.activation.greeting=Dear {0},
+redditclone.email.activation.body=Thank you for signing up for a free account with us at Redditclone. Please click on the link below to activate your account.
+redditclone.email.activation.linkText=Activate Account
