--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -1,1 +1,16 @@
-greeting=Hola!
+redditclone.pageTitle=Redditclone.es - Spring Boot Reddit Clone
+redditclone.appNavLinkText=REDDITCLONE.ES
+
+#welcome email
+redditclone.email.welcome.subject=Bienvenidos a Redditclone
+redditclone.email.welcome.title=Bienvenidos a user nuevo
+redditclone.email.welcome.greeting=Hola {0},
+redditclone.email.welcome.body=Bienvenidos a su nuevo site favorito!
+redditclone.email.welcome.appLinkText=Ir a Redditclone.
+
+#activation email
+redditclone.email.activation.subject=Redditclone User Activation
+redditclone.email.activation.title=Redditclone User Activation
+redditclone.email.activation.greeting=Hola {0},
+redditclone.email.activation.body=Gracias para registrar para un account gratis con Redditclone. Please click on the link below to activate your account.
+redditclone.email.activation.linkText=Activate Account
